--- a/package.json
+++ b/package.json
@@ -22,18 +22,20 @@
     "effects"
   ],
   "author": "Malik Abdul Kawee",
+  "dependencies": {
+    "prop-types": "^15.7.2"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/mak12/rn-faded-scrollview/issues"
   },
   "homepage": "https://github.com/mak12/rn-faded-scrollview#readme",
   "peerDependencies": {
-    "react": "16.11.0",
-    "react-native": "0.62.2",
+    "react": "^17.x.x",
+    "react-native": ">=0.65.1",
     "react-native-linear-gradient": "^2.x.x"
   },
-  "dependencies": {},
   "devDependencies": {
-    "metro-react-native-babel-preset": "^0.59.0"
+    "metro-react-native-babel-preset": "^0.70.2"
   }
 }
